[gd_scene load_steps=4 format=3 uid="uid://d2j5h8yvhxn3s"]

[ext_resource type="Script" path="res://SlotMachine.gd" id="1_8h3xm"]
[ext_resource type="Script" path="res://Reel.gd" id="2_reel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_reel"]
bg_color = Color(0.15, 0.15, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SlotMachine" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8h3xm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.15, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 48
text = "üé∞ SLOT MACHINE üé∞"
horizontal_alignment = 1

[node name="ReelsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Reel1" type="PanelContainer" parent="MarginContainer/VBoxContainer/ReelsContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_reel")
script = ExtResource("2_reel")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ReelsContainer/Reel1"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SymbolLabel" type="Label" parent="MarginContainer/VBoxContainer/ReelsContainer/Reel1/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "üçí"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reel2" type="PanelContainer" parent="MarginContainer/VBoxContainer/ReelsContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_reel")
script = ExtResource("2_reel")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ReelsContainer/Reel2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SymbolLabel" type="Label" parent="MarginContainer/VBoxContainer/ReelsContainer/Reel2/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "üçí"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reel3" type="PanelContainer" parent="MarginContainer/VBoxContainer/ReelsContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_reel")
script = ExtResource("2_reel")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ReelsContainer/Reel3"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SymbolLabel" type="Label" parent="MarginContainer/VBoxContainer/ReelsContainer/Reel3/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "üçí"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Press SPIN to play!"
horizontal_alignment = 1

[node name="SpinButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 36
text = "SPIN"
